# amiga

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  Makefile-Amiga-vbcc  README.md  test.ini
demos/c/: engine7.c  makefile  startup.c
docs/: BUILD.md
examples/basic/: Ellipse1.bas  Rotation.bas
examples/c/: grafik01.c  lang.c  mouse.c  readdir.c  shellcolors.c  startup.c
examples/cgrafik/: createCompileCommands.sh  ifftest.c
examples/cgrafik/include/: Cheetah2.pic.c
examples/cgrafik/media/: Clown-packed.iff  Clown-unpacked.iff
src/AppSupport/: archive.c  archive.h  archvfs.c  archvfs.h  collections.c  collections.h  environment.c  environment.h  filetools.c  filetools.h  image.c  image.h  network.c  network.h  shell.c  shell.h  testutils.c  testutils.h  windows.c  windows.h
src/AppSupportTests/: archivetest.c  archivetest2.c  archivetest_unique.c  archvfstest.c  fetchtest.c  filetoolstest.c  shelltest.c
src/BuildingBlocks/: gfxfunctions.c  gfxtest.c  shelltest.c  tilemapfunctions.c
src/Shelltools/: arch.c  cldir.c  fetch.c  img2ascii.c  mktemp.c  shprintf.c  shresetcolor.c  shsetcolor.c
src/ShelltoolsTests/: shell_tools_test.shell
src/Tests/: arch_test.shell  shell_tools_test.ss
src/gfxtest/: gfxtest.c
src/muitest/: Clock.c
src/shelltest/: shelltest.c
src/sqlitetest/: sqlitetest.c
src/tilemaptest/: tilemaptest.c
tests/basic/: Lines.b  Sinus.b  Skalierung.b
tests/c/: build.uaem  copper.c  engine3.c  engine4.c  engine5.c  engine6.c  lang.c  makefile  mouse.c  snakey.c  startup.c  wbscreen.c  window.c
tests/cgrafik/: bild.c  ifftest.c  makefile
tests/cgrafik/include/: Cheetah.pic.c
tests/cgrafik/media/: Cheetah.iff
tools/src/amake/: README.MD
tools/src/appdb/: README.MD
tools/src/beanbag/: README.MD
tools/src/file/: README.MD
tools/src/mdtohtml/: README.MD
tools/src/servicecomm/: README.MD
tools/src/systembar/: README.md  functions.c  functions.h  main.c  makefile
